--- a/app/src/main/res/layout/movie_review_item.xml
+++ b/app/src/main/res/layout/movie_review_item.xml
@@ -1,30 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/list_item_selector">
+
+    <ImageView
+        android:id="@+id/ivMovieVideoGraphic"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        app:srcCompat="@drawable/ic_chat_bubble_outline_black_48dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tvMovieReviewHeader"
+        style="@style/HeaderText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:maxLines="2"
+        android:paddingRight="0dp"
+        android:text="@string/review_author"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/ivMovieVideoGraphic"
+        app:layout_constraintLeft_toRightOf="@+id/ivMovieVideoGraphic"
+        app:layout_constraintTop_toTopOf="@+id/ivMovieVideoGraphic" />
 
     <TextView
         android:id="@+id/tvMovieReviewAuthor"
+        style="@style/SubHeaderText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
         android:maxLines="2"
-        android:paddingRight="24dp"
-        android:text="@string/review_author"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/ivMovieVideoGraphic"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ivMovieVideoGraphic"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/tvMovieReviewHeader"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:id="@+id/tvMovieReviewContent"
+        style="@style/BodyText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
         android:maxLines="100"
         android:paddingRight="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvMovieReviewAuthor" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/ivMovieVideoGraphic"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
