Feature: Color change
activity_movie_detail main movie info divider invisible

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -44,7 +44,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@android:color/background_light"
+                android:background="@color/ivDividerColorInvisible"
                 app:layout_constraintBottom_toTopOf="@+id/ivSynopsisDivider"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
